Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9100

lctl network down shouldn't error with "LNET unconfigure error 19"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      When lnet modules haven't been loaded, lctl network down returns with "LNET unconfigure error 19" and a non-zero return code. In this case, lctl should simply return an error code of 0 and a message stating lnet is not loaded.

      Logically speaking, the network is already down because lnet isn't even loaded. There are also other places in init scripts where there is an active effort to ignore the error above. Seems to me lctl should just succeed in this case.

            sharmaso Sonia Sharma (Inactive)
            dinatale2 Giuseppe Di Natale (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: