LU-9100 lnet: lctl net down success when lnet not loaded

lctl network down|unconfigure will no longer issue an
error when the lnet module is not loaded. There is no
network to unconfigure. Therefore, we can let the user
know and exit without error.

Signed-off-by: Giuseppe Di Natale <dinatale2@llnl.gov>
Change-Id: I1eda08bd5bb0198e9d374b3b7f00306286da25cc
Reviewed-on: https://review.whamcloud.com/25359
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Sonia Sharma <sonia.sharma@intel.com>
Reviewed-by: Olaf Faaland-LLNL <faaland1@llnl.gov>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>